; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_receive-pack.c_run_receive_hook.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_receive-pack.c_run_receive_hook.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.command = type { i32 }
%struct.string_list = type { i32 }
%struct.receive_hook_feed_state = type { i32, i32, %struct.string_list*, %struct.command* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.command*, i8*, i32, %struct.string_list*)* @run_receive_hook to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @run_receive_hook(%struct.command* %0, i8* %1, i32 %2, %struct.string_list* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.command*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.string_list*, align 8
  %10 = alloca %struct.receive_hook_feed_state, align 8
  %11 = alloca i32, align 4
  store %struct.command* %0, %struct.command** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32 %2, i32* %8, align 4
  store %struct.string_list* %3, %struct.string_list** %9, align 8
  %12 = getelementptr inbounds %struct.receive_hook_feed_state, %struct.receive_hook_feed_state* %10, i32 0, i32 1
  %13 = call i32 @strbuf_init(i32* %12, i32 0)
  %14 = load %struct.command*, %struct.command** %6, align 8
  %15 = getelementptr inbounds %struct.receive_hook_feed_state, %struct.receive_hook_feed_state* %10, i32 0, i32 3
  store %struct.command* %14, %struct.command** %15, align 8
  %16 = load i32, i32* %8, align 4
  %17 = getelementptr inbounds %struct.receive_hook_feed_state, %struct.receive_hook_feed_state* %10, i32 0, i32 0
  store i32 %16, i32* %17, align 8
  %18 = call i64 @feed_receive_hook(%struct.receive_hook_feed_state* %10, i32* null, i32* null)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %21

20:                                               ; preds = %4
  store i32 0, i32* %5, align 4
  br label %31

21:                                               ; preds = %4
  %22 = load %struct.command*, %struct.command** %6, align 8
  %23 = getelementptr inbounds %struct.receive_hook_feed_state, %struct.receive_hook_feed_state* %10, i32 0, i32 3
  store %struct.command* %22, %struct.command** %23, align 8
  %24 = load %struct.string_list*, %struct.string_list** %9, align 8
  %25 = getelementptr inbounds %struct.receive_hook_feed_state, %struct.receive_hook_feed_state* %10, i32 0, i32 2
  store %struct.string_list* %24, %struct.string_list** %25, align 8
  %26 = load i8*, i8** %7, align 8
  %27 = call i32 @run_and_feed_hook(i8* %26, i64 (%struct.receive_hook_feed_state*, i32*, i32*)* @feed_receive_hook, %struct.receive_hook_feed_state* %10)
  store i32 %27, i32* %11, align 4
  %28 = getelementptr inbounds %struct.receive_hook_feed_state, %struct.receive_hook_feed_state* %10, i32 0, i32 1
  %29 = call i32 @strbuf_release(i32* %28)
  %30 = load i32, i32* %11, align 4
  store i32 %30, i32* %5, align 4
  br label %31

31:                                               ; preds = %21, %20
  %32 = load i32, i32* %5, align 4
  ret i32 %32
}

declare dso_local i32 @strbuf_init(i32*, i32) #1

declare dso_local i64 @feed_receive_hook(%struct.receive_hook_feed_state*, i32*, i32*) #1

declare dso_local i32 @run_and_feed_hook(i8*, i64 (%struct.receive_hook_feed_state*, i32*, i32*)*, %struct.receive_hook_feed_state*) #1

declare dso_local i32 @strbuf_release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
